# DiskCortex

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  README.md  cargo  package.json  tsconfig.json
.github/: CONTRIBUTING.md  WORKFLOW.md
docs/architecture/adr/: 001-tech-stack.md  002-safe-deletion-protocol.md
docs/specs/: README.md  openapi.yaml
project/tracking/: CONTEXT_HANDOFF.md  ROADMAP.md
scripts/: log-entry.sh
src/: lib.rs  main.rs
src-gui/: package.json  tailwind.config.js  tsconfig.json
src-gui/src/main/: index.ts  preload.ts
src-gui/src/preload/: index.ts
src-gui/src/renderer/: App.tsx  index.html
src-gui/src/renderer/store/: useAppStore.ts
src-gui/src/renderer/styles/: App.css  global.css
src-gui/src/renderer/types/: index.ts
src-gui/src/services/: apiClient.ts  toolService.ts
src-gui/src/styles/: App.css  global.css
src/cleaner/: commands.rs  dry_run.rs  executor.rs  mod.rs  report.rs
src/config/: loader.rs  mod.rs  settings.rs  validator.rs
src/daemon/: health.rs  main.rs  mod.rs
src/daemon/auth/: mod.rs
src/daemon/compliance/: mod.rs
src/daemon/core/: mod.rs
src/daemon/db/: mod.rs
src/daemon/registry/: mod.rs
src/daemon/scanner/: mod.rs
src/daemon/scheduler/: mod.rs
src/tools/: detector.rs  mod.rs  registry.rs
src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
tests/: auth_login_tests.rs  auth_logout_tests.rs
tests/e2e/: run_e2e_tests.sh  test_gui.sh
tests/e2e/screenshots/: tui_initial_20260304_065646.txt  tui_scanning_20260304_065646.txt  tui_settings_20260304_065646.txt  tui_tools_20260304_065646.txt
tests/unit/: health_test.rs
